fixed spacing

--- a/css/theme-nature.css
+++ b/css/theme-nature.css
@@ -4820,9 +4820,6 @@ background: none;
 .mr0 {
 margin-right: 0;
 }
-.mb0 {
-margin-bottom: 0 !important;
-}
 .mb8 {
 margin-bottom: 8px;
 }
